BlazorApp2/wwwroot/css/app.css
/* ... */
@keyframes dialog-entry {
    0% {
        transform: translateY(30px) scale(0.95);
    }
    100% {
        transform: translateX(0px) scale(1.0);
    }
}

.dialog-title {
    background-color: #444;
    color: #fff2cc;
    padding: 1.3rem 2rem;
}

.dialog-title h2 {
    color: white;
    font-size: 1.4rem;
    margin: 0;
    font-family: 'Bahnschrift', Arial, Helvetica, sans-serif;
    text-transform: uppercase;
    line-height: 1.3rem;
}

.dialog-body {
    flex-grow: 1;
}

.btn-close{
    position: absolute;
    top: 0;
    right: 1rem;
    color: var(--primary-pink);
    font-size: 2rem;
    cursor: pointer;
    padding: .5rem;
}

.dialog-body>div {
    display: flex;
    margin: 1rem;
    align-items: center;
    justify-content: center;
}

.dialog-body video{
    max-width: 100%;
}

.dialog-body label {
    text-align: right;
    width: 200px;
    margin: 0 1.5rem;
}

a, .btn-link {
    color: #0366d6;
}

.btn-primary {
    color: #fff;
    background-color: #1b6ec2;
    border-color: #1861ac;
}

.valid.modified:not([type=checkbox]) {
    outline: 1px solid #26b050;
}

.invalid {
    outline: 1px solid red;
}

.validation-message {
    color: red;
}

#blazor-error-ui {
    background: lightyellow;
    bottom: 0;
    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
    display: none;
    left: 0;
    padding: 0.6rem 1.25rem 0.7rem 1.25rem;
    position: fixed;
    width: 100%;
    z-index: 1000;
}

#blazor-error-ui .dismiss {
    cursor: pointer;
    position: absolute;
    right: 0.75rem;
    top: 0.5rem;
}

@keyframes spin {
    0% {
        transform: rotate(0deg)
    }
    100% {
        transform: rotate(360deg)
    }
}

.pageTitle {
    text-align: center;
    color: var(--primary-pink);
    font-size: 1.5rem;
    font-family: 'Nova Flat';
    margin: 1rem 0 1rem 0;
    /*align-self: end;*/
}

.animeName {
    text-align: center;
    color: antiquewhite;
    font-size: 15px;
    padding-top: 5px;
    padding-bottom: 10px;
}

body {
    background-color: #1d1c1c;
    padding: 0px;
    margin: 0px;
    width: 100%;
    height: 100%;
    font-family: 'Lato', 'Open Sans', sans-serif;
    color: #cecece;
}

.upcomingSeason {
    display: grid;
    grid-template-rows: 5vh 15vh auto;
    justify-content: center;
    align-items: center;
}

.swiper-container {
    z-index: 0;
    height: 100%;
}

.swiper-slide {
    background-position: center;
    width: 250px;
    height: 100%;
    /* -webkit-box-reflect: below 10px linear-gradient(transparent, transparent, #0006); */
    justify-content: center;
    align-items: center;
}

.wrapper {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
    max-width: 650px;
    height: auto;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

/* SEARCH ENGINE COMPONENT DISPLAY */

.card img {
    width: 100%;
    height: 100%;
    transition: all .5s cubic-bezier(.8, .5, .2, 1.4);
}

.card button {
    position: absolute;
    bottom: 10px;
    left: 30%;
    width: fit-content;
    height: 40px;
    cursor: pointer;
    border-style: none;
    background-color: #ff3838;
    color: #fff;
    font-size: 15px;
    outline: none;
    box-shadow: 0px 2px 3px rgba(0, 0, 0, .4);
    transition: all .5s ease-in-out;
}

.row {
    justify-content: space-evenly;
    padding-bottom: 5rem;
}

.row:after {
    content: "";
    display: table;
    clear: both;
}

.searchForm {
    justify-self: center;
    display: grid;
    grid-gap: 1rem;
}

.dropdown {
    justify-self: center;
}

.dropdown.seasons {
    display: grid;
    row-gap: 1rem;
}

.dropdown span {
    padding: 5px;
}

.dropdownBtn, .dropdown-item {
    padding: 5px 10px;
    background-color: var(--bg-primary);
    color: var(--primary-pink);
    font-size: 18px;
    border: none;
    text-transform: capitalize;
    text-align: center;
}

.dropdown-item {
    display: block;
    position: absolute;
    width: 150px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1;
    text-transform: capitalize;
}

.searchComponent {
    display: grid;
    grid-template-rows: 5vh 15vh auto;
    justify-content: center;
    align-items: center;
}

.infoCol h3 {
    letter-spacing: 1px;
    margin: 0px;
    padding-left: 25%;
    font-family: 'Nova Flat';
}

.infoCol h2 {
    font-family: 'Nova Flat';
    letter-spacing: 1px;
    margin: 1rem 0;
    text-align: center;
}

.infoCol p {
    /* padding: 20px 20px; */
    line-height: 24px;
    height: 15rem;
    text-align: center;
    overflow: auto;
}

.infoCol p::-webkit-scrollbar {
    width: 0.25rem;
}

.infoCol p::-webkit-scrollbar-track {
    background-color: #1e1e24;
}

.infoCol p::-webkit-scrollbar-thumb {
    background-color: #6649b8;
}

.animeDetailsValues {
    color: var(--primary-pink);
    text-align: right;
}

.vidsCol h3 {
    text-align: center;
    font-family: nova flat;
}

.scrollCol {
    display: grid;
    grid-template-columns: 350px;
    grid-template-rows: 600px;
    justify-content: center;
    align-items: center;
}

.no-content h3{
    text-align: center;
    font-family: nova flat;
}

#borders {
    /* position: relative; */
    /* width: 350px; */
    /* height: 550px; */
    background: rgb(35 32 32);
    border-radius: 0% 0% 0% 0% / 0% 0% 0% 0%;
    color: white;
    box-shadow: 10px 10px rgb(204 204 204 / 15%);
    transition: all .4s ease;
}

#borders:hover {
    border-radius: 0% 0% 50% 50% / 0% 0% 5% 5%;
    box-shadow: 5px 5px rgb(216 216 216 / 25%);
}
/* ... */

